# dataSUS

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
assets/: datalake.drawio
dags/: dag_datasus.py
datasus/: ingest.py  transform.py
docker/airflow/: Dockerfile
docker/airflow/datasus/: ingest.py
docker/spark/: Dockerfile  spark-defaults.conf
workspace/: process_csv_delta.ipynb  sample.ipynb
