[tool.poetry]
name = "datasus"
version = "0.1.0"
description = ""
authors = ["jorgemaciel <jorge.maciel.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tdqm = "^0.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
